--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Hidenori Miyoshi <miyohide@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "jest": "^25.1.0",
     "standard": "^14.3.2"
   }
 }
