--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jest": "^25.1.0",
     "standard": "^14.3.2",
     "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   }
 }
