--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -28,3 +28,7 @@ jobs:
     - run: yarn test
       env:
         CI: true
+    - name: upload coverage
+      uses: codecov/codecov-action@v1
+#      with:
+#        token: ${{ secrets.CODECOV_TOKEN }}
